--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>赠你一句话</title>
     <style>
         .full{
             position: relative;
