--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             margin-bottom: 35vh;
             margin-left: auto;
             margin-right: auto;
-            font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
         }
         .bracket {
             font-size: 30px;
@@ -45,14 +44,20 @@
         div {
             display: block;
         }
+        a{
+            text-decoration:none;
+            color: black;
+        }
     </style>
 </head>
 <body>
     <div id="hitokoto" class="full">
         <div class="bracket left">『
         </div>
-        <div class="word" id="hitokoto_text">
-        </div>
+        <a href="javascript:location.reload();">
+            <div class="word" id="hitokoto_text">
+            </div>
+        </a>
         <div class="bracket right">』
         </div>
         <div class="author" id="hitokoto_author">
@@ -63,7 +68,7 @@
     if(!window.sessionStorage.getItem('storge')){undefined
         alert("能来到这儿的都有一个有趣的灵魂（OvO）");
         alert("欢迎你，陌生人");
-        alert("你可以刷新或者等待几秒，有什么东西会改变~");
+        alert("你可以点击文字或者等待几秒，有什么东西会改变~~");
         window.sessionStorage.setItem('storge','true')
 
     }
