--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html lang="en" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="6">
+    <meta http-equiv="refresh" content="8">
+    <script type="text/javascript">
+        if (!!window.ActiveXObject || "ActiveXObject" in window) {
+            alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
+        }
+        var title;
+        window.onblur = function(){
+            title = document.title;
+            document.title = "崩溃了(╯‵□′）╯︵┴─┴";
+        }
+        window.onfocus = function () {
+            if(title) {
+                document.title= title;
+            }
+        }
+    </script>
     <title>赠你一句话</title>
     <style>
         .full{
