--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="8">
+    <meta http-equiv="refresh" content="10">
+    <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
+    <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
+    <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
     <script type="text/javascript">
         if (!!window.ActiveXObject || "ActiveXObject" in window) {
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
