--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <title>赠你一句话</title>
     <style>
         .full{
+            background-color: whitesmoke;
+            filter:alpha(Opacity=60);-moz-opacity:0.6;opacity: 0.6;
             position: relative;
             color: #000000;
             z-index: 1;
@@ -55,6 +57,8 @@
             padding: 15px 50px;
         }
         .author {
+            background-color: whitesmoke;
+            filter:alpha(Opacity=90);
             font-size: 20px;
             color: #000000;
             float: right;
@@ -69,7 +73,9 @@
         }
     </style>
 </head>
-<body>
+<body style="background-repeat:no-repeat;
+background-attachment:fixed;background-size:cover;
+background-image: url(https://source.unsplash.com/random)>
     <div id="hitokoto" class="full">
         <div class="bracket left">『
         </div>
