--- a/index.html
+++ b/index.html
@@ -66,6 +66,45 @@
 <body style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
+  <div id="page_end_html">
+    <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
+    <script type="text/javascript">
+        L2Dwidget
+            .on('*', (name) => {
+                console.log('%c EVENT ' + '%c -> ' + name, 'background: #222; color: yellow', 'background: #fff; color: #000')
+            })
+            .init({
+                dialog: {
+                    enable: true,
+                    script: {
+                        'every idle 5s': '$hitokoto$',
+                        'hover .star': '星星在天上而你在我心里 (*/ω＼*)',
+                        'tap body': '哎呀！别碰我！',
+                        'tap face': '人家已经不是小孩子了！'
+                    }
+                },
+                "model": {
+                    jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+                    "scale": 1
+                },
+                "display": {
+                    "position": "left",
+                    "width": 170,
+                    "height": 300,
+                    "hOffset": 40,
+                    "vOffset": -20
+                },
+                "mobile": {
+                    "show": true,
+                    "scale": 0.5
+                },
+                "react": {
+                    "opacityDefault": 0.7,
+                    "opacityOnHover": 0.2
+                }
+            });
+    </script>
+</div>
     <div id="hitokoto" class="full">
         <div class="bracket left">『
         </div>
