--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             text-decoration:none;
             color: black;
         }
+        #page_end_html{
+            width:expression(window.screen.width - (border 边框) - (scroll width 滚动条宽度) );
+        }
     </style>
 </head>
 <body style="background-repeat:no-repeat;
