--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="10">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
     <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
@@ -60,9 +61,6 @@
         a{
             text-decoration:none;
             color: black;
-        }
-        #page_end_html{
-            width:expression(window.screen.width - (border 边框) - (scroll width 滚动条宽度) );
         }
     </style>
 </head>
