--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="10">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
     <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
     <script type="text/javascript">
         if (!!window.ActiveXObject || "ActiveXObject" in window) {
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
@@ -86,7 +87,6 @@ background-image: url(https://source.unsplash.com/random);">
                 },
                 "model": {
                     jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
-                    "scale": 1
                 },
                 "display": {
                     "position": "left",
@@ -97,7 +97,7 @@ background-image: url(https://source.unsplash.com/random);">
                 },
                 "mobile": {
                     "show": true,
-                    "scale": 0.5
+                    "scale": 1
                 },
                 "react": {
                     "opacityDefault": 0.7,
