--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             json: 'callback',
             jsonCallback: 'hitokoto',
             success(data) {
-                $('#hitokoto_text').text(data.hitokoto)
-                $('#hitokoto_author').text("—— " + (data.from_who || '') + "「" + data.from + "」")
+                $('#hitokoto_text').html(data.hitokoto)
+                $('#hitokoto_author').html("—— " + (data.from_who || '') + "「" + data.from + "」")
             },
             error(jqXHR, textStatus, errorThrown) {
                 console.error(textStatus, errorThrown)
