--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
     </script>
     <script>
-    $(document).ready(function(e){
+    $(document).ready(function(){
         setTimeout('updateShow  ()',0);
     });
     function updateShow() {
