--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <script>
-    window.onload = function(){
+    $(document).ready(function(){
         setTimeout('updateShow  ()',0);
-    };
+    });
     function updateShow() {
         fetch('https://v1.hitokoto.cn')
             .then(response => response.json())
@@ -19,8 +19,8 @@
            setTimeout('updateShow()',5000);
     }
 </script>
-    <script language="javascript" src="http://code.jquery.com/jquery-1.6.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
+    <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="..../assets/jQuery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
