--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="../assets/jQuery.js"></script>
     <script>
     $(document).ready(function(){
         setTimeout('updateShow  ()',0);
@@ -20,7 +21,6 @@
     }
 </script>
     <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="..../assets/jQuery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
