--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="http://libs.baidu.com/jquerymobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
-    <script src="http://libs.baidu.com/jquerytools/1.2.7/jquery.tools.min.js"></script>
-    <script src="http://libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
-    $(document).ready(function(){
-        setTimeout('updateShow  ()',0);
-    });
+    function myFunction(){
+            setTimeout('updateShow  ()',0);
+        };
     function updateShow() {
         fetch('https://v1.hitokoto.cn')
             .then(response => response.json())
@@ -23,7 +18,13 @@
             .catch(console.error)
            setTimeout('updateShow()',5000);
     }
-</script>
+    </script>
+    <script src="http://libs.baidu.com/jquerymobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+    <script src="http://libs.baidu.com/jquerytools/1.2.7/jquery.tools.min.js"></script>
+    <script src="http://libs.baidu.com/jqueryui/1.8.22/jquery-ui.min.js "></script>
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
@@ -92,7 +93,7 @@
         }
     </style>
 </head>
-<body style="background-repeat:no-repeat;
+<body onload="myFunction()"; style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
   <script src="../assets/autoload.js"></script>
