--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
         }
     </script>
-    <title>赠你一句话</title>
+    <title onload="myFunction()">赠你一句话</title>
     <style>
         canvas{
             position:absolute;
@@ -93,7 +93,7 @@
         }
     </style>
 </head>
-<body onload="myFunction()"; style="background-repeat:no-repeat;
+<body style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
   <script src="../assets/autoload.js"></script>
