--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
         }
     </script>
-    <title onload="myFunction()">赠你一句话</title>
+    <title>赠你一句话</title>
     <style>
         canvas{
             position:absolute;
@@ -97,7 +97,7 @@
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
   <script src="../assets/autoload.js"></script>
-  <div id="page_end_html">
+  <div onload="myFunction()" id="page_end_html">
     <script type="text/javascript">
         L2Dwidget
             .on('*', (name) => {
