--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes"/>
-    <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
+    <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
     <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
     <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
@@ -35,7 +35,7 @@
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
         }
     </script>
-    <title onload="myFunction()">赠你一句话</title>
+    <title onload="myFunction()";>赠你一句话</title>
     <style>
         canvas{
             position:absolute;
