--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
         }
     </script>
-    <title onload="myFunction()";>赠你一句话</title>
+    <title>赠你一句话</title>
     <style>
         canvas{
             position:absolute;
+            touch-action: none;
             right:0;
             top:0;
             height: 100%;
@@ -93,7 +94,7 @@
         }
     </style>
 </head>
-<body style="background-repeat:no-repeat;
+<body onload="myFunction()"; style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
   <script src="../assets/autoload.js"></script>
