--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <style>
         canvas{
             position:absolute;
-            touch-action: true;
+            z-index:99999;
             right:0;
             top:0;
             height: 100%;
