--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     
     <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=2.0, user-scalable=yes"/>
-    <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;"></canvas>
+    <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointevents:none"></canvas>
     <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
     <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
     <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
