--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
     <script language="javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=0.7, maximum-scale=2.0, user-scalable=yes"/>
     <canvas class="fireworks" style="position:fixed;left:0;top:0;z-index:99999999;pointer-events:none;"></canvas>
-    <script src="https://cdn.zxki.cn/js/baozha/baozha1.js"></script>
-    <script src="https://cdn.zxki.cn/js/baozha/baozha2.js"></script>
+    <script src="../assets/click.js"></script>
     <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
     <script type="text/javascript">
         if (!!window.ActiveXObject || "ActiveXObject" in window) {
             alert('请抛弃万恶的IE浏览器吧！更换浏览器访问本网站呢……');
         }
     </script>
-    <title>赠你一句话</title>
+    <title>random sentence</title>
     <style>
         canvas{
             position:absolute;
