--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <body onload="myFunction()"; style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
 background-image: url(https://source.unsplash.com/random);">
-  <script src="../assets/autoload.js"></script>
+  <script src="../assets/slide.js"></script>
   <div id="page_end_html">
       <meting-js
         server="netease"
