--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
     <script>
     function myFunction(){
             setTimeout('updateShow  ()',0);
@@ -42,6 +43,16 @@
     <script type="text/javascript" src="https://idnhsnx.github.io/assets/click.js"></script> 
     <script type="text/javascript" src="https://idnhsnx.github.io/assets/slide.js"></script>  
     </canvas>
+    <script>
+        $("body").css({
+            position: "fixed",
+            width: "100%"
+        });
+        document.body.addEventListener("touchmove", bodyScroll, false);
+        function bodyScroll(event) {
+            event.preventDefault();
+        }
+    </script>
     <script src="https://l2dwidget.js.org//lib/L2Dwidget.min.js"></script>
     <script type="text/javascript">
         if (!!window.ActiveXObject || "ActiveXObject" in window) {
