--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body onload="myFunction()"; style="background-repeat:no-repeat;
 background-attachment:fixed;background-size:cover;
-background-image: url(https://imgapi.jinghuashang.cn/);">
+background-image: url(https://imgapi.jinghuashang.cn/random);">
   <div id="page_end_html">
       <meting-js
         server="netease"
